# Property_Management_System

./: .gitignore  CMakeLists.txt  LICENSE  README.md  backup.db  backup_20250330_145505.db  backup_20250330_183743.db  backup_20250330_195745.db  build.sh  run.ps1  run.sh  sorted_info.txt  vcpkg.json  技术文档.md
.filter-tools/: garbage2null-linux-x86  garbage2null-linux-x86_64  garbage2null-macos-arm64
.github/workflows/: ci.yml  codeql.yml
backend/routes/: auth.js
data_gen/: property_faker.py  requirements.txt
doc/: bug.md  guide.md  require.md
doc/html/: apartment_8c.html  apartment_8c__incl.dot  apartment_8c_a01de98826735d07d7d41604a2ced9a64_icgraph.dot  apartment_8c_a3ee28cb32cd0361f149bbe6bc70a2067_cgraph.dot  apartment_8c_a3ee28cb32cd0361f149bbe6bc70a2067_icgraph.dot  apartment_8c_a5719db844b0918aafaa6d253b8c45957_cgraph.dot  apartment_8c_a5719db844b0918aafaa6d253b8c45957_icgraph.dot  apartment_8c_a63ea4ea26e546d75de3f1c096fd42b35_cgraph.dot  apartment_8c_a63ea4ea26e546d75de3f1c096fd42b35_icgraph.dot  apartment_8c_a6a304349bcf5a8c6d5ca1d6492274551_cgraph.dot  apartment_8c_a6a304349bcf5a8c6d5ca1d6492274551_icgraph.dot  apartment_8c_aa1bb1cf39436e25a94c5b311a4a3f6db_cgraph.dot  apartment_8c_aa1bb1cf39436e25a94c5b311a4a3f6db_icgraph.dot  apartment_8c_abc341fc49d9d611aa0ab40491b452b3d_cgraph.dot  apartment_8c_abc341fc49d9d611aa0ab40491b452b3d_icgraph.dot  apartment_8c_ade762acc676da9bb7e589a8a1ac43424_icgraph.dot  auth_8c.html  auth_8c__incl.dot  auth_8c_a4147a77cb3537ed3be427279c07b8f38_icgraph.dot  auth_8c_a5dec1261f68e6ad3d0c56db959f49dca_icgraph.dot  auth_8c_aa3c7c22f3ab8daab77a43d5e47c22e9d_cgraph.dot  auth_8c_af8ec5b8912ae6023809fc9aa3a0c75cb_icgraph.dot  building_8c.html  building_8c__incl.dot  building_8c_a4e0f73fd25765595a6a751f684e3ab50_cgraph.dot  building_8c_a4e0f73fd25765595a6a751f684e3ab50_icgraph.dot  building_8c_a6d4890d6a03a0cd23d7c327274d79c3a_cgraph.dot  building_8c_a6d4890d6a03a0cd23d7c327274d79c3a_icgraph.dot  building_8c_a7d69df1acd0b028d644fb952b70394e6_cgraph.dot  building_8c_a7d69df1acd0b028d644fb952b70394e6_icgraph.dot  building_8c_a9f44de6beffd02b8eadb9fc6c838cf0e_cgraph.dot  building_8c_a9f44de6beffd02b8eadb9fc6c838cf0e_icgraph.dot  building_8c_ab6750d60c5152fc84ff4f6f9ef084365_cgraph.dot  building_8c_ab6750d60c5152fc84ff4f6f9ef084365_icgraph.dot  building_8c_ae867efc49ab44e71f009e49da6c67f3d_cgraph.dot  building_8c_ae867efc49ab44e71f009e49da6c67f3d_icgraph.dot  building_8c_aed1ee9543944b8a88ebf7b7ac952e127_cgraph.dot  building_8c_aed1ee9543944b8a88ebf7b7ac952e127_icgraph.dot  console_8c.html  console_8c__incl.dot  (+179 more)
doc/latex/: apartment_8c.tex  apartment_8c.tex.tmp  apartment_8c__incl.dot  apartment_8c_a01de98826735d07d7d41604a2ced9a64_icgraph.dot  apartment_8c_a3ee28cb32cd0361f149bbe6bc70a2067_cgraph.dot  apartment_8c_a3ee28cb32cd0361f149bbe6bc70a2067_icgraph.dot  apartment_8c_a5719db844b0918aafaa6d253b8c45957_cgraph.dot  apartment_8c_a5719db844b0918aafaa6d253b8c45957_icgraph.dot  apartment_8c_a63ea4ea26e546d75de3f1c096fd42b35_cgraph.dot  apartment_8c_a63ea4ea26e546d75de3f1c096fd42b35_icgraph.dot  apartment_8c_a6a304349bcf5a8c6d5ca1d6492274551_cgraph.dot  apartment_8c_a6a304349bcf5a8c6d5ca1d6492274551_icgraph.dot  apartment_8c_aa1bb1cf39436e25a94c5b311a4a3f6db_cgraph.dot  apartment_8c_aa1bb1cf39436e25a94c5b311a4a3f6db_icgraph.dot  apartment_8c_abc341fc49d9d611aa0ab40491b452b3d_cgraph.dot  apartment_8c_abc341fc49d9d611aa0ab40491b452b3d_icgraph.dot  apartment_8c_ade762acc676da9bb7e589a8a1ac43424_icgraph.dot  auth_8c.tex  auth_8c__incl.dot  auth_8c_a4147a77cb3537ed3be427279c07b8f38_icgraph.dot  auth_8c_a5dec1261f68e6ad3d0c56db959f49dca_icgraph.dot  auth_8c_aa3c7c22f3ab8daab77a43d5e47c22e9d_cgraph.dot  auth_8c_af8ec5b8912ae6023809fc9aa3a0c75cb_icgraph.dot  building_8c.tex  building_8c__incl.dot  building_8c_a4e0f73fd25765595a6a751f684e3ab50_cgraph.dot  building_8c_a4e0f73fd25765595a6a751f684e3ab50_icgraph.dot  building_8c_a6d4890d6a03a0cd23d7c327274d79c3a_cgraph.dot  building_8c_a6d4890d6a03a0cd23d7c327274d79c3a_icgraph.dot  building_8c_a7d69df1acd0b028d644fb952b70394e6_cgraph.dot  building_8c_a7d69df1acd0b028d644fb952b70394e6_icgraph.dot  building_8c_a9f44de6beffd02b8eadb9fc6c838cf0e_cgraph.dot  building_8c_a9f44de6beffd02b8eadb9fc6c838cf0e_icgraph.dot  building_8c_ab6750d60c5152fc84ff4f6f9ef084365_cgraph.dot  building_8c_ab6750d60c5152fc84ff4f6f9ef084365_icgraph.dot  building_8c_ae867efc49ab44e71f009e49da6c67f3d_cgraph.dot  building_8c_ae867efc49ab44e71f009e49da6c67f3d_icgraph.dot  building_8c_aed1ee9543944b8a88ebf7b7ac952e127_cgraph.dot  building_8c_aed1ee9543944b8a88ebf7b7ac952e127_icgraph.dot  console_8c.tex  (+172 more)
frontend/src/: App.js
frontend/src/pages/: AdminDashboard.js  LoginPage.js  StaffDashboard.js  UserDashboard.js
include/auth/: auth.h  tokens.h
include/db/: database.h  db_init.h  db_query.h  db_utils.h
include/models/: apartment.h  building.h  parking.h  service.h  transaction.h  user.h
include/ui/: ui_admin.h  ui_login.h  ui_main.h  ui_owner.h  ui_staff.h
include/utils/: console.h  file_ops.h  utils.h
scripts/: clean.sh
src/: factorial.c  factorial.h  main.c
src/auth/: auth.c  tokens.c
src/db/: database.c  db_init.c  db_query.c  db_utils.c
src/models/: apartment.c  building.c  building_rules.h  db_utils.c  parking.c  service.c  transaction.c  user.c  user.h
src/ui/: ui_admin.c  ui_login.c  ui_main.c  ui_owner.c  ui_staff.c
src/utils/: console.c  file_ops.c  utils.c
tests/: CMakeLists.txt  test_auth.c
tst/: CMakeLists.txt  CMakeLists.txt.ini  test.cxx
